--- a/l10n_cu_hlg_computers_inventory/wizards/saves_wzd_views.xml
+++ b/l10n_cu_hlg_computers_inventory/wizards/saves_wzd_views.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
         <record id="saves_wzd_form" model="ir.ui.view">
             <field name="name">saves_wzd.form</field>
@@ -37,7 +37,7 @@
             <field name="name">Planning saves</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">computers_inventory.saves_wzd</field>
-            <field name="view_type">form</field>
+            <field name="binding_view_types">form</field>
             <field name="view_mode">form</field>
             <field name="target">new</field>
         </record>
@@ -46,4 +46,4 @@
                   parent="menu_reports"
                   sequence="5"/>
     </data>
-</openerp>
+</odoo>
