--- a/l10n_cu_hlg_computers_inventory/wizards/wzd_report_inspection.xml
+++ b/l10n_cu_hlg_computers_inventory/wizards/wzd_report_inspection.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
         <record id="wzd_report_inspection_form" model="ir.ui.view">
             <field name="name">wzd.report_inspection</field>
@@ -37,7 +37,7 @@
             <field name="name">Inspections</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">computers_inventory.report_inspection_wzd</field>
-            <field name="view_type">form</field>
+            <field name="binding_view_types">form</field>
             <field name="view_mode">form</field>
             <field name="view_id" ref="wzd_report_inspection_form"/>
             <field name="target">new</field>
@@ -50,4 +50,4 @@
 
 
     </data>
-</openerp>
+</odoo>
