--- a/l10n_cu_hlg_computers_inventory/wizards/wzd_report_security_incident.xml
+++ b/l10n_cu_hlg_computers_inventory/wizards/wzd_report_security_incident.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
         <record id="wzd_report_security_incident_form" model="ir.ui.view">
             <field name="name">wzd.report_security_incident</field>
@@ -38,7 +38,7 @@
             <field name="name">Security incidents</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">computers_inventory.report_security_incident_wzd</field>
-            <field name="view_type">form</field>
+            <field name="binding_view_types">form</field>
             <field name="view_mode">form</field>
             <field name="view_id" ref="wzd_report_security_incident_form"/>
             <field name="target">new</field>
@@ -49,4 +49,4 @@
                   parent="menu_reports"
                   sequence="2"/>
     </data>
-</openerp>
+</odoo>
